# auth

./: .air.toml  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  go.mod  go.sum  goose.env  main.go  rcauth.toml  sqlc.yaml
cmd/: root.go  serve.go
domain/cmd/: migrate.go  root.go  serve.go
domain/pkg/config/: config.go
domain/pkg/logger/: logger.go
interfaces/http/: server.go
interfaces/http/routes/: routes.go
internal/api/: api.go  health.go  options.go
internal/conf/: configuration.go  logging.go
internal/ratelimit/: burst.go  burst_test.go  interval.go  interval_test.go  ratelimit.go  ratelimit_test.go
internal/utilities/: context.go
migrations/: 20250326151138_initial.sql  20250401000001_initial.go  20250401000002_create_users.go  20250401000003_create_refresh_tokens.go  20250401000004_create_audit_log_entries.go  20250401000005_create_auth_functions.go  20250609033334_setup.up.sql
postgres/: Dockerfile.postgres.dev  init_postgres.sh
rcauth-cli/: Cargo.toml
rcauth-cli/src/: config.rs  main.rs  migrate.rs  serve.rs
rcauth-core/: Cargo.toml
rcauth-core/src/: error.rs  lib.rs  logger.rs  store.rs
rcauth-server/: Cargo.toml
rcauth-server/src/: config.rs  lib.rs  server.rs
rcauth-server/src/api/: mod.rs  routes.rs
rcauth-server/src/routes/: mod.rs  routes.rs
rcauth-server/src/routes/api/: mod.rs
rcauth-server/src/routes/middleware/: logger.rs
rcauth-store/: Cargo.toml  Dockerfile.postgres.dev  init_postgres.sh
rcauth-store/migrations/: 20250609033339_init.down.sql  20250609033339_init.up.sql
rcauth-store/src/: config.rs  error.rs  lib.rs  store.rs
rcauth-utils/: Cargo.toml
