[workspace]
members = [
  "rcauth-cli",
  "rcauth-core",
  "rcauth-server",
  "rcauth-store",
  "rcauth-utils",
]
resolver = "3"

[workspace.dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
snafu = "0.8.6"
hyper = "1.6.0"
async-trait = "0.1.88"
