[workspace]
members = [
  "rcauth-cli",
  "rcauth-core",
  "rcauth-server",
  "rcauth-store",
  "rcauth-utils",
]
resolver = "3"

[workspace.dependencies]
dotenvy = "0.15.7"
envy = { git = "https://github.com/softprops/envy", rev = "8eb504f83b002c7df24b9f7f106fc32a2a501a06" }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
snafu = "0.8.6"
http = "1.3.1"
async-trait = "0.1.88"
thiserror = "2.0.12"
