[package]
name = "rcauth-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rcauth-core = { path = "../rcauth-core" }
rcauth-store = { path = "../rcauth-store" }
rcauth-server = { path = "../rcauth-server" }
toml = "0.8.23"
lazy_static = "1.5.0"
figment = { version = "0.10.19", features = ["toml"] }
