[package]
name = "rcauth-core"
version = "0.1.0"
edition = "2024"

[dependencies]
snafu = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
envy = { workspace = true }
thiserror = { workspace = true }
