[package]
name = "rcauth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tower = "0.5.2"
axum = { version = "0.8.4", features = ["default"] }
hyper = "1.6.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower-layer = "0.3.3"
validator = { version = "0.20.0", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
