[package]
name = "rcauth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
figment = { workspace = true, features = ["env", "toml"] }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
