[package]
name = "rcauth-store"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "migrate",
  "uuid",
] }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
snafu = { workspace = true }
rcauth-core = { path = "../rcauth-core" }
async-trait = { workspace = true }
serde = { workspace = true }
figment = { workspace = true, features = ["env", "toml"] }
